# prior

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RETRO.md  ROADMAP.md  SHARING.md  WEEK_2.md  _v.txt  claude-progress.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/prior/: SKILL.md
.github/workflows/: ci.yml
data/: users.json  users.json.example
data/atlas/: atlas.json  contributions.json  review.json  view_global_d3.html
data/eval/: results.json
data/fulltext/: arxiv_1706.03762v7.txt  arxiv_2106.09685v2.txt  arxiv_2211.12620v2.txt  arxiv_2308.08155v2.txt
data/prior-core-v0.2/: README.md  contributions_core_consensus.json  contributions_core_grounded.json  core_exclusions.json  papers_core.jsonl
data_hackathon/atlas/: view_atlas.html
docs/: ACCESS.md  ANNOTATION.md  CLUSTERS.md  DESIGN.md  EVAL.md  EXPAND_SPEC.md  RUNNING.md  architecture.md  cartographer-direction-handoff.md  design.md  edge_quality_interim.md  graph_stats.md  landscape.md  principles.md  scoper-dates-handoff.md  scoper-primary-filter-handoff.md  shared-substrate.md  slides.html
docs/project/: DEMO_SCRIPT.md  RETRO.md
evals/: README.md  baseline_comparison.md  baseline_vanilla.py  baseline_websearch.md  baseline_websearch.py  citation_check.py  graph_eval.py  graph_stats.py  groundedness.py  origin_check.py  qa_3way.md  qa_3way.py  results.md  results_graph.md
evals/scifact/: __init__.py  dataset.py  harness.py  run.py
experiments/edge_quality/: .gitignore  ONBOARDING.md  backfill_citations.py  diff_arms.py  extract_citation_contexts.py  fetch_arxiv_bbl.py  judge_edges.py  make_human_queue.py  merge_citations.py  relate_decomposed.py  run_overnight.sh  scan_fulltext_citations.py  temporal_holdout.py
experiments/vocab_collapse/: analyze_collapse.py  generate_claims.py  match_claims.py  run_collapse.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/public/: viewer.html
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AddPaper.tsx  AnnotateControls.tsx  AnnotatePanel.tsx  AskPanel.tsx  ClaimGraph.tsx  (+16 more)
scripts/: atlas_review.py  audit_drops.py  backfill_types.py  backfill_work_ids.py  build_scoped.py  check_recall.py  classify_core.py  cluster_core.py  cluster_summary.py  compare_methods.py  contrib_communities.py  contrib_edge_clusters.py  dedup_corpus.py  demo.sh  edge_audit.py  enrich_arxiv.py  eval_groundedness.py  expand.py  expand_recall.py  explore.py  extract.py  fold_anchors.py  fullpaper.py  gen_atlas_view.py  gen_community_view.py  gen_global_d3.py  get_fulltext.py  ingest_manual_pdfs.py  playwright_login.py  prior-ctl.sh  prior-tunnel.sh  prior-up.sh  refresh-scan.sh  snowball.py  tighten.py  topic_search.py  weekend_run.py  why_isolated.py
src/prior/: __init__.py  agent.py  ask_agent.py  atlas.py  auth.py  cartographer.py  chat_store.py  citelinks.py  claims.py  claude_cli.py  cli.py  collections.py  completeness.py  config.py  consensus.py  contributor.py  daemon.py  dates.py  embeddings.py  eval_suite.py  evaluation.py  fullpaper.py  fulltext.py  graph.py  ingestion.py  llm.py  models.py  navigator.py  pipeline.py  reader.py  refresh.py  render.py  render_html.py  repair.py  sample_papers.py  scoper.py  selfeval.py
tests/: test_agent.py  test_atlas.py  test_auth.py  test_bridge_seeding.py  test_canonical_key.py  test_citelinks.py  test_completeness.py  test_consensus.py  test_contributions.py  test_evals.py  test_expand.py  test_fullpaper.py  test_fullpaper_integration.py  test_fulltext_resolve.py  test_graph_eval.py  test_ingestion.py  test_origin_check.py  test_prefilter.py  test_query_recovery.py  test_refextract.py  test_refresolve.py  test_relate_batching.py  test_render.py  test_repair.py  test_scifact.py  test_scope_undecided.py  test_sources.py
(+15 files in other folders)
