[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prior"
version = "0.1.0"
description = "Turn primary literature into a queryable atlas of claims (Reader / Cartographer / Navigator)."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
    "networkx>=3.0",
    "rank-bm25>=0.2.2",
    "pexpect>=4.9",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]
# Run the pipeline on a Claude Code login (Max plan) instead of API credits:
#   pip install -e ".[claude-code]"  ;  export PRIOR_LLM_BACKEND=claude-code
claude-code = ["claude-agent-sdk>=0.1"]
# Live two-level graph store (Neo4j) + local credit-free embeddings:
graph = ["neo4j>=5.20", "fastembed>=0.3", "scikit-learn>=1.3"]
# Web API (prior serve), consumed by the React UI in frontend/:
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# Rich whole-paper Markdown renders (scripts/fullpaper.py): structure-aware PDF →
# Markdown with figures. The arXiv-HTML path (math + figures) needs no extra deps.
fullpaper = ["pymupdf>=1.24", "pymupdf4llm>=0.0.17"]
# Reference resolution (edge_quality milestone 1): reuse citation_verification's
# MultiSourceResolver to turn a raw bibliography reference into a canonical
# DOI/arXiv/OpenAlex id. SHA-pinned so Prior's build is reproducible and CI-safe
# (no sibling checkout). [sources] pulls `requests`, unlocking the OpenAlex/DBLP/
# S2 grounding sources — the ones that reach non-arXiv OpenAlex ids. The pinned
# package's own base deps (pydantic/rapidfuzz/…) install transitively; no SDK.
#   pip install -e ".[resolve]"
resolve = [
    "citation-verifier[sources] @ git+https://github.com/Agents4Academia-AI/citation_verification@52c109c10701d685e28c417b283e740c6cd43773",
]

[project.scripts]
prior = "prior.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
